Fixed date input alignment and disable old dates

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,9 +99,10 @@ form > p, .paymentContainer form > p{
 
 div.mat-form-field-infix {
   border: none;
-  margin-top: 4px;
-  font-size: 14px !important; 
-  
+  margin-top: 5px;
+  font-size: 13px !important; 
+  text-indent: 10px;
+font-family: Roboto;
    
 }
 
